--- a/index.html
+++ b/index.html
@@ -133,7 +133,100 @@
             </ul>
           </div>
         </div>
-        <div class="board"></div>
+        <div class="board">
+          <div class="notice">
+            <h3>
+              도서관 소식
+              <button><i class="fa-solid fa-arrow-right"></i></button>
+            </h3>
+            <ul class="notice_list">
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[통합]</strong>
+                    2024 북클럽중랑 〈얼리버드 나잇아울〉 시즌2(6~8월) 통합 운영
+                    안내
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[상봉]</strong>
+                    중랑상봉도서관 6월 책보따리 대출 서비스 안내 (전집대출)
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[중랑]</strong>
+                    중랑구립정보도서관 16차 누락분 및 17차 입고 희망신간 비치
+                    알림
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[상봉]</strong>
+                    8차 희망도서 비치 안내
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[통합]</strong>
+                    전자책 시스템 점검에 따른 서비스 일시 중지 안내 (5/26(일)
+                    0시30분 ~ 9시00분)
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[통합]</strong>
+                    6월 중랑구립도서관 휴관 안내
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[면목]</strong>
+                    2024 한 달 한 책 읽기 초등편 6월 <온책읽기> 안내
+                  </p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <p>
+                    &#45;
+                    <strong>[면목]</strong>
+                    2024년 6월 영어 스토리텔링 프로그램 안내
+                  </p>
+                </a>
+              </li>
+            </ul>
+            <div class="booknarae">
+              <a href="#">
+                <img src="./images/booknarae.png" alt="책나래" />
+                <p>장애인을 위한<br />도서관 자료 무료 우편서비스</p>
+              </a>
+            </div>
+          </div>
+          <div class="event">
+            <h3>행사 안내</h3>
+          </div>
+        </div>
         <div class="book"></div>
       </main>
       <footer id="footer">
