--- a/index.html
+++ b/index.html
@@ -224,7 +224,100 @@
             </div>
           </div>
           <div class="event">
-            <h3>행사 안내</h3>
+            <h3>
+              행사 안내
+              <button><i class="fa-solid fa-arrow-right"></i></button>
+            </h3>
+            <ul class="event_list">
+              <li class="event_list_r event_list_b">
+                <a href="#">
+                  <h4>
+                    계절 별 텃밭 가꾸기 체험<br />
+                    <strong>「가족텃밭」 1회차 모집안내</strong>
+                  </h4>
+                  <div class="event_info">
+                    <strong>모집대상</strong>
+                    <p>
+                      중랑구 거주 2~3가구<br />
+                      (보호자, 자녀 포함 총 8명 내외)
+                    </p>
+                  </div>
+                  <div class="event_info">
+                    <strong>모집기간</strong>
+                    <p>
+                      2024. 5. 4(토) 09:00 ~
+                      <br />(선착순 마감, 온라인 모집)
+                    </p>
+                  </div>
+                </a>
+              </li>
+              <li class="event_list_b">
+                <a href="#">
+                  <h4>
+                    2024년 청소년 자립학교<br />
+                    <strong>「농부학교」 모집</strong>
+                  </h4>
+                  <div class="event_info">
+                    <strong>모집대상</strong>
+                    <p>
+                      중등 1학년 ~ 고등 1학년 청소년<br />
+                      (거주지 제한 없음)
+                    </p>
+                  </div>
+                  <div class="event_info">
+                    <strong>모집기간</strong>
+                    <p>
+                      2024. 4. 8(월) ~ 4. 12(금)
+                      <br />(온라인 모집)
+                    </p>
+                  </div>
+                </a>
+              </li>
+              <li class="event_list_r">
+                <a href="#">
+                  <h4>
+                    양원숲속도서관 청소년운영위원회<br />
+                    <strong>[꿈쟁이] 4기 모집</strong>
+                  </h4>
+                  <div class="event_info">
+                    <strong>모집대상</strong>
+                    <p>
+                      중등 1학년 ~ 고등 1학년 청소년 10명<br />
+                      (중랑구 거주자 대상)
+                    </p>
+                  </div>
+                  <div class="event_info">
+                    <strong>모집기간</strong>
+                    <p>
+                      2024. 4. 9(화) 09:00 ~
+                      <br />(선착순 마감, 온라인 및 방문접수)
+                    </p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <h4>
+                    2024년 양원숲인문학<br />
+                    <strong>「감각의 논리와 함께 읽는 미술 역사」</strong>
+                  </h4>
+                  <div class="event_info">
+                    <strong>모집대상</strong>
+                    <p>
+                      인문학에 관심있는 누구나<br />
+                      (인원 제한 없음)
+                    </p>
+                  </div>
+                  <div class="event_info">
+                    <strong>모집기간</strong>
+                    <p>
+                      2024. 3. 19(화) 09:00 ~
+                      <br />(온라인 및 유선접수)
+                    </p>
+                  </div>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="book"></div>
