--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.min.css"
+      rel="stylesheet"
+    />
 
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.8.0/main.min.js"></script>
+    <script src="https://www.jsdelivr.com/package/npm/fullcalendar"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
@@ -320,228 +326,245 @@
             </ul>
           </div>
         </div>
-        <div class="book">
-          <div class="book_slide">
-            <h3>
-              <div class="book_tab">
-                <button class="new_book active">신착도서</button>
-                <button class="rec_book">사서추천도서</button>
-                <button class="mem_book">회원추천도서</button>
-              </div>
+        <div class="info">
+          <div class="book">
+            <div class="book_slide">
+              <h3>
+                <div class="book_tab">
+                  <button class="new_book active">신착도서</button>
+                  <button class="rec_book">사서추천도서</button>
+                  <button class="mem_book">회원추천도서</button>
+                </div>
+                <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+              </h3>
+              <swiper-container
+                class="mySwiper newbook_slide"
+                slides-per-view="4.5"
+                space-between="30"
+                free-mode="true"
+                autoplay-delay="3000"
+                autoplay-disable-on-interaction="false"
+                loop="true"
+              >
+                <swiper-slide>
+                  <img src="./images/book/new01.png" alt="가족복원소" />
+                  <strong>가족복원소</strong>
+                  <p>이필원</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/new02.png" alt="애프터 스티브잡스" />
+                  <strong>애프터 스티브잡스</strong>
+                  <p>트립 미클</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/new03.png" alt="마포주공아파트" />
+                  <strong>마포주공아파트</strong>
+                  <p>박철수</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/new04.png"
+                    alt="우리의 활보는 사치가 아니야"
+                  />
+                  <strong>우리의 활보는 사치가 아니야</strong>
+                  <p>김지우</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/new05.png" alt="채소와 마주 한 상" />
+                  <strong>채소와 마주 한 상</strong>
+                  <p>재인</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/new06.png"
+                    alt="오늘도 스마트폰으로 인생사진을 찍습니다"
+                  />
+                  <strong>오늘도 스마트폰으로 인생사진을 찍습니다</strong>
+                  <p>방쿤</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/new07.png" alt="프레너미" />
+                  <strong>프레너미</strong>
+                  <p>심아진</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/new08.png" alt="야구잡썰" />
+                  <strong>야구잡썰</strong>
+                  <p>강해인 외</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/new09.png"
+                    alt="이 연애에 이름을 붙인다면"
+                  />
+                  <strong>이 연애에 이름을 붙인다면</strong>
+                  <p>시요일</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/new10.png" alt="일류의 조건" />
+                  <strong>일류의 조건</strong>
+                  <p>사이토 다카시</p>
+                </swiper-slide>
+              </swiper-container>
+
+              <swiper-container
+                class="mySwiper recbook_slide"
+                slides-per-view="4.5"
+                space-between="30"
+                free-mode="true"
+                autoplay-delay="3000"
+                autoplay-disable-on-interaction="false"
+                loop="true"
+              >
+                <swiper-slide>
+                  <img src="./images/book/rec01.png" alt="한국 요약 금지" />
+                  <strong>한국 요약 금지</strong>
+                  <p>콜린 마샬</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/rec02.png" alt="일인칭 가난" />
+                  <strong>일인칭 가난</strong>
+                  <p>안온</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/rec03.png"
+                    alt="우리 할머니는 사이보그"
+                  />
+                  <strong>우리 할머니는 사이보그</strong>
+                  <p>남유하</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/rec04.png" alt="초간단 교양 1분만" />
+                  <strong>초간단 교양 1분만</strong>
+                  <p>1분만</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/rec05.png"
+                    alt="멸망한 세계에서 살아남는 법"
+                  />
+                  <strong>멸망한 세계에서 살아남는 법</strong>
+                  <p>변혜지</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/rec06.png"
+                    alt="미드나잇 라이브러리"
+                  />
+                  <strong>미드나잇 라이브러리</strong>
+                  <p>매트 헤이그</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/rec07.png"
+                    alt="이런, 우리 엄마가 우주선을 유괴했어요"
+                  />
+                  <strong>이런, 우리 엄마가 우주선을 유괴했어요</strong>
+                  <p>심너울</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/rec08.png" alt="저주토끼" />
+                  <strong>저주토끼</strong>
+                  <p>정보라</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/rec09.png"
+                    alt="거절은 너무 어려워!"
+                  />
+                  <strong>거절은 너무 어려워!</strong>
+                  <p>윤미경</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/rec10.png"
+                    alt="촉법소년, 살인해도 될까요?"
+                  />
+                  <strong>촉법소년, 살인해도 될까요?</strong>
+                  <p>김성호</p>
+                </swiper-slide>
+              </swiper-container>
+
+              <swiper-container
+                class="mySwiper membook_slide"
+                slides-per-view="4.5"
+                space-between="30"
+                free-mode="true"
+                autoplay-delay="3000"
+                autoplay-disable-on-interaction="false"
+                loop="true"
+              >
+                <swiper-slide>
+                  <img
+                    src="./images/book/mem01.png"
+                    alt="딸에게 보내는 심리학 편지"
+                  />
+                  <strong>딸에게 보내는 심리학 편지</strong>
+                  <p>한성희</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem02.png" alt="휴대폰 전쟁" />
+                  <strong>휴대폰 전쟁</strong>
+                  <p>로이스 페터슨</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem03.png" alt="라면은 멋있다" />
+                  <strong>라면은 멋있다</strong>
+                  <p>공선옥</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem04.png" alt="열아홉의 프리킥" />
+                  <strong>열아홉의 프리킥</strong>
+                  <p>줄리 A. 스완슨</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/mem05.png"
+                    alt="2120년에서 친구가 찾아왔다"
+                  />
+                  <strong>2120년에서 친구가 찾아왔다</strong>
+                  <p>안야 슈튀르처</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem06.png" alt="사하맨션" />
+                  <strong>사하맨션</strong>
+                  <p>조남주</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem07.png" alt="사이언스 쿠킹" />
+                  <strong>사이언스 쿠킹</strong>
+                  <p>스튜어트 페리몬드</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem08.png" alt="팔과 다리의 가격" />
+                  <strong>팔과 다리의 가격</strong>
+                  <p>장강명</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img
+                    src="./images/book/mem09.png"
+                    alt="존재의 세 가지 거짓말"
+                  />
+                  <strong>존재의 세 가지 거짓말</strong>
+                  <p>아고타 크리스토프</p>
+                </swiper-slide>
+                <swiper-slide>
+                  <img src="./images/book/mem10.png" alt="겐샤이" />
+                  <strong>겐샤이</strong>
+                  <p>케빈 홀</p>
+                </swiper-slide>
+              </swiper-container>
+            </div>
+          </div>
+          <div class="calender">
+            <!-- <h3>
+              도서관 일정
               <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
-            </h3>
-            <swiper-container
-              class="mySwiper newbook_slide"
-              slides-per-view="4.5"
-              space-between="30"
-              free-mode="true"
-              autoplay-delay="3000"
-              autoplay-disable-on-interaction="false"
-              loop="true"
-            >
-              <swiper-slide>
-                <img src="./images/book/new01.png" alt="가족복원소" />
-                <strong>가족복원소</strong>
-                <p>이필원</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/new02.png" alt="애프터 스티브잡스" />
-                <strong>애프터 스티브잡스</strong>
-                <p>트립 미클</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/new03.png" alt="마포주공아파트" />
-                <strong>마포주공아파트</strong>
-                <p>박철수</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/new04.png"
-                  alt="우리의 활보는 사치가 아니야"
-                />
-                <strong>우리의 활보는 사치가 아니야</strong>
-                <p>김지우</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/new05.png" alt="채소와 마주 한 상" />
-                <strong>채소와 마주 한 상</strong>
-                <p>재인</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/new06.png"
-                  alt="오늘도 스마트폰으로 인생사진을 찍습니다"
-                />
-                <strong>오늘도 스마트폰으로 인생사진을 찍습니다</strong>
-                <p>방쿤</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/new07.png" alt="프레너미" />
-                <strong>프레너미</strong>
-                <p>심아진</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/new08.png" alt="야구잡썰" />
-                <strong>야구잡썰</strong>
-                <p>강해인 외</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/new09.png"
-                  alt="이 연애에 이름을 붙인다면"
-                />
-                <strong>이 연애에 이름을 붙인다면</strong>
-                <p>시요일</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/new10.png" alt="일류의 조건" />
-                <strong>일류의 조건</strong>
-                <p>사이토 다카시</p>
-              </swiper-slide>
-            </swiper-container>
-
-            <swiper-container
-              class="mySwiper recbook_slide"
-              slides-per-view="4.5"
-              space-between="30"
-              free-mode="true"
-              autoplay-delay="3000"
-              autoplay-disable-on-interaction="false"
-              loop="true"
-            >
-              <swiper-slide>
-                <img src="./images/book/rec01.png" alt="한국 요약 금지" />
-                <strong>한국 요약 금지</strong>
-                <p>콜린 마샬</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/rec02.png" alt="일인칭 가난" />
-                <strong>일인칭 가난</strong>
-                <p>안온</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/rec03.png"
-                  alt="우리 할머니는 사이보그"
-                />
-                <strong>우리 할머니는 사이보그</strong>
-                <p>남유하</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/rec04.png" alt="초간단 교양 1분만" />
-                <strong>초간단 교양 1분만</strong>
-                <p>1분만</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/rec05.png"
-                  alt="멸망한 세계에서 살아남는 법"
-                />
-                <strong>멸망한 세계에서 살아남는 법</strong>
-                <p>변혜지</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/rec06.png" alt="미드나잇 라이브러리" />
-                <strong>미드나잇 라이브러리</strong>
-                <p>매트 헤이그</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/rec07.png"
-                  alt="이런, 우리 엄마가 우주선을 유괴했어요"
-                />
-                <strong>이런, 우리 엄마가 우주선을 유괴했어요</strong>
-                <p>심너울</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/rec08.png" alt="저주토끼" />
-                <strong>저주토끼</strong>
-                <p>정보라</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/rec09.png" alt="거절은 너무 어려워!" />
-                <strong>거절은 너무 어려워!</strong>
-                <p>윤미경</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/rec10.png"
-                  alt="촉법소년, 살인해도 될까요?"
-                />
-                <strong>촉법소년, 살인해도 될까요?</strong>
-                <p>김성호</p>
-              </swiper-slide>
-            </swiper-container>
-
-            <swiper-container
-              class="mySwiper membook_slide"
-              slides-per-view="4.5"
-              space-between="30"
-              free-mode="true"
-              autoplay-delay="3000"
-              autoplay-disable-on-interaction="false"
-              loop="true"
-            >
-              <swiper-slide>
-                <img
-                  src="./images/book/mem01.png"
-                  alt="딸에게 보내는 심리학 편지"
-                />
-                <strong>딸에게 보내는 심리학 편지</strong>
-                <p>한성희</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem02.png" alt="휴대폰 전쟁" />
-                <strong>휴대폰 전쟁</strong>
-                <p>로이스 페터슨</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem03.png" alt="라면은 멋있다" />
-                <strong>라면은 멋있다</strong>
-                <p>공선옥</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem04.png" alt="열아홉의 프리킥" />
-                <strong>열아홉의 프리킥</strong>
-                <p>줄리 A. 스완슨</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/mem05.png"
-                  alt="2120년에서 친구가 찾아왔다"
-                />
-                <strong>2120년에서 친구가 찾아왔다</strong>
-                <p>안야 슈튀르처</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem06.png" alt="사하맨션" />
-                <strong>사하맨션</strong>
-                <p>조남주</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem07.png" alt="사이언스 쿠킹" />
-                <strong>사이언스 쿠킹</strong>
-                <p>스튜어트 페리몬드</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem08.png" alt="팔과 다리의 가격" />
-                <strong>팔과 다리의 가격</strong>
-                <p>장강명</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img
-                  src="./images/book/mem09.png"
-                  alt="존재의 세 가지 거짓말"
-                />
-                <strong>존재의 세 가지 거짓말</strong>
-                <p>아고타 크리스토프</p>
-              </swiper-slide>
-              <swiper-slide>
-                <img src="./images/book/mem10.png" alt="겐샤이" />
-                <strong>겐샤이</strong>
-                <p>케빈 홀</p>
-              </swiper-slide>
-            </swiper-container>
+            </h3> -->
+            <div id="calendar-container">
+              <div id="calendar"></div>
+            </div>
           </div>
         </div>
       </main>
