--- a/index.html
+++ b/index.html
@@ -342,8 +342,6 @@
                 slides-per-view="4.5"
                 space-between="30"
                 free-mode="true"
-                autoplay-delay="3000"
-                autoplay-disable-on-interaction="false"
                 loop="true"
               >
                 <swiper-slide>
@@ -412,8 +410,6 @@
                 slides-per-view="4.5"
                 space-between="30"
                 free-mode="true"
-                autoplay-delay="3000"
-                autoplay-disable-on-interaction="false"
                 loop="true"
               >
                 <swiper-slide>
@@ -491,8 +487,6 @@
                 slides-per-view="4.5"
                 space-between="30"
                 free-mode="true"
-                autoplay-delay="3000"
-                autoplay-disable-on-interaction="false"
                 loop="true"
               >
                 <swiper-slide>
@@ -569,8 +563,142 @@
         </div>
       </main>
       <footer id="footer">
-        <div class="link"></div>
-        <div class="footer"></div>
+        <div class="link">
+          <ul class="familysite_1depth">
+            <li>
+              <button>
+                <span>중랑구립도서관 바로가기</span>
+                <i
+                  class="fa-solid fa-chevron-up"
+                  style="margin-right: 20px"
+                ></i>
+              </button>
+              <ul class="familysite_2depth">
+                <li>
+                  <a href="https://www.jungnanglib.seoul.kr/library/"
+                    >중랑구립도서관</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.jungnanglib.seoul.kr/jnlib/"
+                    >중랑구립정보도서관</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.jungnanglib.seoul.kr/mmlib/"
+                    >중랑구립면목정보도서관</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.jungnanglib.seoul.kr/jhklib/"
+                    >중화어린이도서관</a
+                  >
+                </li>
+                <li>
+                  <a href="https://www.jungnanglib.seoul.kr/sblib/"
+                    >중랑상봉도서관</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="http://ebookjungnanglib.seoul.kr:8080/Kyobo_T3/Default.asp"
+                    >중랑구립전자도서관</a
+                  >
+                </li>
+                <li>
+                  <a href="https://smlib.jungnanglib.seoul.kr:444/small/main.do"
+                    >중랑구작은도서관</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li>
+              <button>
+                <span style="margin-left: 20px">중랑구 주요기관</span>
+                <i
+                  class="fa-solid fa-chevron-up"
+                  style="margin-right: 20px"
+                ></i>
+              </button>
+              <ul class="familysite_2depth">
+                <li>
+                  <a href="https://www.jungnang.go.kr/portal/main.do">
+                    중랑구청
+                  </a>
+                </li>
+                <li>
+                  <a href="https://council.jungnang.go.kr/"> 중랑구의회 </a>
+                </li>
+                <li>
+                  <a href="https://dbedu.sen.go.kr/"> 동부교육지원청 </a>
+                </li>
+                <li>
+                  <a href="https://www.jnfac.or.kr/index"> 중랑문화재단 </a>
+                </li>
+                <li>
+                  <a href="https://www.jungnangimc.or.kr/">
+                    중랑구시설관리공단
+                  </a>
+                </li>
+                <li>
+                  <a href="https://jungnangcsw.or.kr/">
+                    중랑구사회복지협의회
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.ejnc.kr/index.php"> 중랑문화원 </a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <button>
+                <span style="margin-left: 20px">주요 도서관 홈페이지</span>
+                <i class="fa-solid fa-chevron-up"></i>
+              </button>
+              <ul class="familysite_2depth">
+                <li>
+                  <a href="https://dl.nanet.go.kr/">국회전자도서관</a>
+                </li>
+                <li>
+                  <a href="https://www.nanet.go.kr/main.do">국회도서관</a>
+                </li>
+                <li>
+                  <a href="https://www.nl.go.kr/">국립중앙도서관</a>
+                </li>
+                <li>
+                  <a href="https://lib.seoul.go.kr/">서울도서관</a>
+                </li>
+                <li>
+                  <a href="https://www.nlcy.go.kr/NLCY/main/index.do"
+                    >국립어린이청소년도서관</a
+                  >
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <div class="line01"></div>
+          <div class="line02"></div>
+        </div>
+
+        <div class="footer">
+          <div class="footer_txt">
+            <ul class="footer_list">
+              <li><a href="#">개인정보처리방침</a></li>
+              <li><a href="#">도서관서비스헌장</a></li>
+              <li><a href="#">고객서비스헌장</a></li>
+              <li><a href="#">도서관이용약관</a></li>
+              <li><a href="#">이메일무단수집거부</a></li>
+            </ul>
+            <div class="footer_info">
+              <span>서울특별시 중랑구 송림길 172</span>
+              <span>TEL : 02-432-0710~3</span>
+            </div>
+            <div class="copy">
+              COPYRIGHT(C) 2018 BY YANGWONSUPSOK LIBRARY. ALL RIGHTS RESERVED
+            </div>
+          </div>
+          <h2>양원숲속도서관</h2>
+        </div>
       </footer>
     </div>
 
