--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <header id="header">
         <h1>
           <a href="#"
-            ><img src="/images/whitelogo.png" alt="양원숲속도서관"
+            ><img src="./images/whitelogo.png" alt="양원숲속도서관"
           /></a>
         </h1>
         <div class="nav">
